--- a/tests/integration/targets/omevv_baseline_profile/tests/create_bp_single_cluster.yaml
+++ b/tests/integration/targets/omevv_baseline_profile/tests/create_bp_single_cluster.yaml
@@ -15,6 +15,7 @@
 - name: Set prerequisite
   ansible.builtin.include_tasks: _helper.yml
   vars:
+    fetch_cluster_trigger: 1
     repository_profile_1_trigger: 1
 
 - block:
@@ -24,7 +25,7 @@
         state: present
         name: OMAM_Baseline_Profile
         repository_profile: OMAM_Firm_Repo
-        cluster: OMAM-Cluster-1
+        cluster: "{{ cluster_name[0] }}"
         days:
           - sunday
           - wednesday
