--- a/tests/integration/targets/omevv_baseline_profile/tests/_cleanup.yml
+++ b/tests/integration/targets/omevv_baseline_profile/tests/_cleanup.yml
@@ -16,26 +16,26 @@
       when: delete_baseline_trigger is defined
 
     - name: Delete Repository profile - 1
-      dellemc.openmanage.omevv_baseline_profile:
+      dellemc.openmanage.omevv_firmware_repository_profile:
         state: absent
         name: OMAM_Firm_Repo
       register: delete_firm_repo_profile
       when: delete_repository_profile_1_trigger is defined
 
-    - name: Verify task status - Delete baseline profile
+    - name: Verify task status - Delete Repository profile - 1
       ansible.builtin.assert:
         that:
           - delete_firm_repo_profile.changed
           - 'delete_firm_repo_profile.msg == "Successfully deleted the OMEVV
             firmware repository profile."'
-      when: delete_repository_profile_2_trigger is defined
+      when: delete_repository_profile_1_trigger is defined
 
     - name: Delete Repository profile - 2
-      dellemc.openmanage.omevv_baseline_profile:
+      dellemc.openmanage.omevv_firmware_repository_profile:
         state: absent
-        name: OMAM_Firm_Repo
+        name: OMAM_Modify_Firm_Repo
       register: delete_firm_repo_profile
-      when: delete_repository_profile_1_trigger is defined
+      when: delete_repository_profile_2_trigger is defined
 
     - name: Verify task status - Delete baseline profile
       ansible.builtin.assert:
