--- a/tests/integration/targets/omevv_baseline_profile/tests/delete.yaml
+++ b/tests/integration/targets/omevv_baseline_profile/tests/delete.yaml
@@ -16,6 +16,7 @@
   ansible.builtin.include_tasks: _helper.yml
   vars:
     repository_profile_1_trigger: 1
+    fetch_cluster_trigger: 1
     baseline_trigger: 1
 
 - block:
@@ -40,6 +41,16 @@
       diff: true
       register: cm_dm_result_baseline
 
+    - name: Store cluster details for verification
+      ansible.builtin.set_fact:
+        cluster_name: "{{ cluster_name[0] }}"
+        cluster_id: "{{ cluster_id[0] }}"
+        group_id: "{{ group_id[0] }}"
+        module_group_id: "{{
+          cm_dm_result_baseline.diff.before.clusterGroups[0].omevv_groupID }}"
+        firmware_repo_id: "{{
+          firm_repo_1.profile_info.id }}"
+
     - name: Verify task status - Delete a baseline profile (Check and Diff mode)
       ansible.builtin.assert:
         that:
@@ -47,6 +58,21 @@
           - 'cm_dm_result_baseline.msg == "Changes found to be applied."'
           - cm_dm_result_baseline.diff.before | length > 1
           - cm_dm_result_baseline.diff.after | length == 0
+          - >
+            cm_dm_result_baseline.diff.before.clusterGroups[0].clusterID
+            == cluster_id
+          - >
+            cm_dm_result_baseline.diff.before.clusterGroups[0].clusterName
+            == cluster_name
+          - module_group_id == group_id
+          - cm_dm_result_baseline.diff.before.description is none
+          - >
+            cm_dm_result_baseline.diff.before.firmwareRepoId
+            == firmware_repo_id
+          - >
+            'cm_dm_result_baseline.diff.before.firmwareRepoName
+            == "OMAM_Firm_Repo"'
+          - 'cm_dm_result_baseline.diff.before.name == "OMAM_Baseline_Profile"'
 
     - name: Delete a baseline profile (Normal mode)
       dellemc.openmanage.omevv_baseline_profile:
@@ -59,6 +85,10 @@
           - normal_result_baseline.changed
           - 'normal_result_baseline.msg == "Successfully deleted the baseline
             profile."'
+
+    - name: Store baseline_profile_info data to a variable for verification
+      ansible.builtin.set_fact:
+        profile_info: "{{ normal_result_baseline.baseline_profile_info }}"
 
     - name: Verify baseline details
       ansible.builtin.include_tasks: _verify_baseline.yml
@@ -78,6 +108,7 @@
     - name: Prereq - Create a baseline profile
       ansible.builtin.include_tasks: _helper.yml
       vars:
+        fetch_cluster_trigger: 1
         baseline_trigger: 1
 
     - name: Delete a baseline profile (Normal and Diff mode)
@@ -85,6 +116,16 @@
         <<: *bp_delete
       diff: true
       register: normal_diff_result_baseline
+
+    - name: Store cluster details for verification
+      ansible.builtin.set_fact:
+        cluster_name: "{{ cluster_name[0] }}"
+        cluster_id: "{{ cluster_id[0] }}"
+        group_id: "{{ group_id[0] }}"
+        module_group_id: "{{
+          cm_dm_result_baseline.diff.before.clusterGroups[0].omevv_groupID }}"
+        firmware_repo_id: "{{
+          firm_repo_1.profile_info.id }}"
 
     - name: Verify task status - Delete a baseline profile (Normal and
         Diff mode)
@@ -95,6 +136,25 @@
             baseline profile."'
           - normal_diff_result_baseline.diff.before | length > 1
           - normal_diff_result_baseline.diff.after | length == 0
+          - >
+            cm_dm_result_baseline.diff.before.clusterGroups[0].clusterID
+            == cluster_id
+          - >
+            cm_dm_result_baseline.diff.before.clusterGroups[0].clusterName
+            == cluster_name
+          - module_group_id == group_id
+          - cm_dm_result_baseline.diff.before.description is none
+          - >
+            cm_dm_result_baseline.diff.before.firmwareRepoId
+            == firmware_repo_id
+          - >
+            'cm_dm_result_baseline.diff.before.firmwareRepoName
+            == "OMAM_Firm_Repo"'
+          - 'cm_dm_result_baseline.diff.before.name == "OMAM_Baseline_Profile"'
+
+    - name: Store baseline_profile_info data to a variable for verification
+      ansible.builtin.set_fact:
+        profile_info: "{{ normal_diff_result_baseline.baseline_profile_info }}"
 
     - name: Verify baseline details
       ansible.builtin.include_tasks: _verify_baseline.yml
