--- a/tests/integration/targets/omevv_baseline_profile/tests/create_bp_single_cluster.yaml
+++ b/tests/integration/targets/omevv_baseline_profile/tests/create_bp_single_cluster.yaml
@@ -47,6 +47,14 @@
       diff: true
       register: cm_dm_result_baseline
 
+    - name: Store cluster details for verification
+      ansible.builtin.set_fact:
+        cluster_name: "{{ cluster_name[0] }}"
+        cluster_id: "{{ cluster_id[0] }}"
+        group_id: "{{ group_id[0] }}"
+        module_group_id: "{{
+          cm_dm_result_baseline.diff.after.clusterGroups[0].omevv_groupID }}"
+
     - name: Verify task status - Create a baseline profile with single
         cluster (Check and Diff mode - Changes expected)
       ansible.builtin.assert:
@@ -55,6 +63,30 @@
           - 'cm_dm_result_baseline.msg == "Changes found to be applied."'
           - cm_dm_result_baseline.diff.before | length == 0
           - cm_dm_result_baseline.diff.after | length > 1
+          - >
+            cm_dm_result_baseline.diff.after.clusterGroups[0].clusterID
+            == cluster_id
+          - >
+            cm_dm_result_baseline.diff.after.clusterGroups[0].clusterName
+            == cluster_name
+          - module_group_id == group_id
+          - cm_dm_result_baseline.diff.after.jobSchedule.friday == false
+          - cm_dm_result_baseline.diff.after.jobSchedule.monday == false
+          - cm_dm_result_baseline.diff.after.jobSchedule.saturday == false
+          - cm_dm_result_baseline.diff.after.jobSchedule.sunday == true
+          - cm_dm_result_baseline.diff.after.jobSchedule.thursday == false
+          - 'cm_dm_result_baseline.diff.after.jobSchedule.time == "22:00"'
+          - cm_dm_result_baseline.diff.after.jobSchedule.tuesday == false
+          - cm_dm_result_baseline.diff.after.jobSchedule.wednesday == true
+          - 'cm_dm_result_baseline.diff.after.name == "OMAM_Baseline_Profile"'
+          - >
+            'cm_dm_result_baseline.diff.after.repository_profile
+            == "OMAM_Firm_Repo"'
+
+    - name: Set prerequisite
+      ansible.builtin.include_tasks: _helper.yml
+      vars:
+        fetch_cluster_trigger: 1
 
     - name: Create a baseline profile with single cluster (Normal mode)
       dellemc.openmanage.omevv_baseline_profile:
@@ -70,6 +102,13 @@
             profile."'
           - normal_result_baseline.baseline_profile_info
 
+    - name: Store baseline_profile_info data to a variable for verification
+      ansible.builtin.set_fact:
+        profile_info: "{{ normal_result_baseline.baseline_profile_info}}"
+
+    - name: Verify baseline details
+      ansible.builtin.include_tasks: _verify_baseline.yml
+
     - name: Create a baseline profile with single cluster (Idempotence)
       dellemc.openmanage.omevv_baseline_profile:
         <<: *bp_single_cluster
@@ -83,19 +122,30 @@
           - 'idempotence_result_baseline.msg == "No changes found to be
             applied."'
 
-    - name: Verify baseline details
-      ansible.builtin.include_tasks: _verify_baseline.yml
-
     - name: Delete baseline profile created in previous task
       ansible.builtin.include_tasks: _cleanup.yml
       vars:
         delete_baseline_trigger: 1
+
+    - name: Set prerequisite
+      ansible.builtin.include_tasks: _helper.yml
+      vars:
+        fetch_cluster_trigger: 1
 
     - name: Create a baseline profile with single cluster (Normal and Diff mode)
       dellemc.openmanage.omevv_baseline_profile:
         <<: *bp_single_cluster
       diff: true
       register: normal_diff_result_baseline
+
+    - name: Store cluster details for verification
+      ansible.builtin.set_fact:
+        cluster_name: "{{ cluster_name[0] }}"
+        cluster_id: "{{ cluster_id[0] }}"
+        group_id: "{{ group_id[0] }}"
+        module_group_id: "{{
+          normal_diff_result_baseline.diff.after.clusterGroups[0].omevv_groupID
+          }}"
 
     - name: Verify task status - Create a baseline profile with single
         cluster (Normal and Diff mode)
@@ -107,6 +157,31 @@
           - normal_diff_result_baseline.baseline_profile_info
           - normal_diff_result_baseline.diff.before | length == 0
           - normal_diff_result_baseline.diff.after | length > 1
+          - >
+            normal_diff_result_baseline.diff.after.clusterGroups[0].clusterID
+            == cluster_id
+          - >
+            normal_diff_result_baseline.diff.after.clusterGroups[0].clusterName
+            == cluster_name
+          - module_group_id == group_id
+          - normal_diff_result_baseline.diff.after.jobSchedule.friday == false
+          - normal_diff_result_baseline.diff.after.jobSchedule.monday == false
+          - normal_diff_result_baseline.diff.after.jobSchedule.saturday == false
+          - normal_diff_result_baseline.diff.after.jobSchedule.sunday == true
+          - normal_diff_result_baseline.diff.after.jobSchedule.thursday == false
+          - 'normal_diff_result_baseline.diff.after.jobSchedule.time == "22:00"'
+          - normal_diff_result_baseline.diff.after.jobSchedule.tuesday == false
+          - normal_diff_result_baseline.diff.after.jobSchedule.wednesday == true
+          - >
+            'normal_diff_result_baseline.diff.after.name
+            == "OMAM_Baseline_Profile"'
+          - >
+            'normal_diff_result_baseline.diff.after.repository_profile
+            == "OMAM_Firm_Repo"'
+
+    - name: Store baseline_profile_info data to a variable for verification
+      ansible.builtin.set_fact:
+        profile_info: "{{ normal_diff_result_baseline.baseline_profile_info }}"
 
     - name: Verify baseline details
       ansible.builtin.include_tasks: _verify_baseline.yml
