--- a/tests/integration/targets/omevv_baseline_profile/tests/modify.yaml
+++ b/tests/integration/targets/omevv_baseline_profile/tests/modify.yaml
@@ -51,6 +51,23 @@
       diff: true
       register: cm_dm_result_baseline
 
+    - name: Store cluster details for verification
+      ansible.builtin.set_fact:
+        cluster_name_1: "{{ cluster_name[0] }}"
+        cluster_name_2: "{{ cluster_name[1] }}"
+        cluster_id_1: "{{ cluster_id[0] }}"
+        cluster_id_2: "{{ cluster_id[1] }}"
+        group_id_1: "{{ group_id[0] }}"
+        group_id_2: "{{ group_id[1] }}"
+        module_group_id_1: "{{
+          cm_dm_result_baseline.diff.after.clusterGroups[0].omevv_groupID }}"
+        module_group_id_2: "{{
+          cm_dm_result_baseline.diff.after.clusterGroups[1].omevv_groupID }}"
+        firmware_repo_id_1: "{{
+          firm_repo_1.profile_info.id }}"
+        firmware_repo_id_2: "{{
+          firm_repo_2.profile_info.id }}"
+
     - name: Verify task status - Modify a baseline profile (Check and Diff mode)
       ansible.builtin.assert:
         that:
@@ -58,6 +75,65 @@
           - 'cm_dm_result_baseline.msg == "Changes found to be applied."'
           - cm_dm_result_baseline.diff.before | length > 1
           - cm_dm_result_baseline.diff.after | length > 1
+          - >
+            cm_dm_result_baseline.diff.after.clusterGroups[0].clusterID
+            == cluster_id_1
+          - >
+            cm_dm_result_baseline.diff.after.clusterGroups[1].clusterID
+            == cluster_id_2
+          - >
+            cm_dm_result_baseline.diff.after.clusterGroups[0].clusterName
+            == cluster_name_1
+          - >
+            cm_dm_result_baseline.diff.after.clusterGroups[1].clusterName
+            == cluster_name_2
+          - module_group_id_1 == group_id_1
+          - module_group_id_2 == group_id_2
+          - >
+            cm_dm_result_baseline.diff.after.firmwareRepoId
+            == firmware_repo_id_2
+          - >
+            'cm_dm_result_baseline.diff.after.repository_profile
+            == "OMAM_Modify_Firm_Repo"'
+          - cm_dm_result_baseline.diff.after.jobSchedule.friday == false
+          - cm_dm_result_baseline.diff.after.jobSchedule.monday == false
+          - cm_dm_result_baseline.diff.after.jobSchedule.saturday == true
+          - cm_dm_result_baseline.diff.after.jobSchedule.sunday == true
+          - cm_dm_result_baseline.diff.after.jobSchedule.thursday == false
+          - 'cm_dm_result_baseline.diff.after.jobSchedule.time == "00:00"'
+          - cm_dm_result_baseline.diff.after.jobSchedule.tuesday == false
+          - cm_dm_result_baseline.diff.after.jobSchedule.wednesday == true
+          - 'cm_dm_result_baseline.diff.after.name == "OMAM_Baseline_Profile"'
+          - >
+            cm_dm_result_baseline.diff.before.clusterGroups[0].clusterID
+            == cluster_id_1
+          - >
+            cm_dm_result_baseline.diff.before.clusterGroups[0].clusterName
+            == cluster_name_1
+          - module_group_id_1 == group_id_1
+          - >
+            cm_dm_result_baseline.diff.before.firmwareRepoId
+            == firmware_repo_id_1
+          - >
+            'cm_dm_result_baseline.diff.before.repository_profile
+            == "OMAM_Firm_Repo"'
+          - cm_dm_result_baseline.diff.before.jobSchedule.friday == true
+          - cm_dm_result_baseline.diff.before.jobSchedule.monday == true
+          - cm_dm_result_baseline.diff.before.jobSchedule.saturday == true
+          - cm_dm_result_baseline.diff.before.jobSchedule.sunday == true
+          - cm_dm_result_baseline.diff.before.jobSchedule.thursday == true
+          - 'cm_dm_result_baseline.diff.before.jobSchedule.time == "12:00"'
+          - cm_dm_result_baseline.diff.before.jobSchedule.tuesday == true
+          - cm_dm_result_baseline.diff.before.jobSchedule.wednesday == true
+          - 'cm_dm_result_baseline.diff.before.name == "OMAM_Baseline_Profile"'
+
+    - name: Set prerequisite
+      ansible.builtin.include_tasks: _helper.yml
+      vars:
+        repository_profile_1_trigger: 1
+        repository_profile_2_trigger: 1
+        fetch_cluster_trigger: 1
+        baseline_trigger: 1
 
     - name: Modify a baseline profile (Normal mode)
       dellemc.openmanage.omevv_baseline_profile:
@@ -72,6 +148,13 @@
             profile."'
           - normal_result_baseline.baseline_profile_info
 
+    - name: Store baseline_profile_info data to a variable for verification
+      ansible.builtin.set_fact:
+        profile_info: "{{ normal_result_baseline.baseline_profile_info }}"
+
+    - name: Verify baseline details
+      ansible.builtin.include_tasks: _verify_baseline.yml
+
     - name: Modify a baseline profile (Idempotence)
       dellemc.openmanage.omevv_baseline_profile:
         <<: *bp_multiple_cluster
@@ -83,9 +166,6 @@
           - not idempotence_result_baseline.changed
           - 'idempotence_result_baseline.msg == "No changes found to be
             applied."'
-
-    - name: Verify baseline details
-      ansible.builtin.include_tasks: _verify_baseline.yml
 
   always:
     - name: Post clean up
